fixed dialog visibility for cursor

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -23,6 +23,7 @@ body
     max-width: 375px
     background-color: $white
     padding-bottom: 40px
+    z-index: 1
 
     .subscribe__article, .subscribe__form
         margin-top: 40px
@@ -109,6 +110,7 @@ body
     border: 0px
     opacity: 0
     transition: opacity .3s ease-in
+    z-index: 0
 
     &__image
         margin-top: 149px
